# fd-passing

./: .travis.yml  Cargo.toml  LICENSE  README.md  build.rs
examples/: Cargo.toml  simple.rs
ffi/: consts.c
src/: functions.rs  lib.rs  types.rs  utils.rs
