[package]
name = "fd-passing"
version = "0.0.1"
authors = ["David Pineau <dav.pineau@gmail.com>", "Guillaume Gomez <guillaume1.gomez@gmail.com>"]

build = "build.rs"

[build-dependencies]
gcc = "0.3"

[dependencies]
# libc = "0.2"
libc = { git = "https://github.com/GuillaumeGomez/libc", branch = "fd-passing" }

[lib]
name = "fd_passing"
