[package]
name = "fd-passing"
version = "0.0.1"
authors = ["David Pineau <dav.pineau@gmail.com>", "Guillaume Gomez <guillaume1.gomez@gmail.com>"]

build = "build.rs"

[build-dependencies]
gcc = "0.3"

[dependencies]
libc = { git = "https://github.com/rust-lang/libc" }

[dev-dependencies]
tempdir = "0.3.5"

[lib]
name = "fd_passing"
