[package]
name = "fd-passing"
version = "0.0.1"
authors = ["David Pineau <dav.pineau@gmail.com>", "Guillaume Gomez <guillaume1.gomez@gmail.com>"]

description = "A crate to pass file descriptors between processes."
repository = "https://github.com/Joacchim/fd-passing"
readme = "README.md"
keywords = ["fd", "passing", "file", "descriptor", "process"]
license = "MIT"

build = "build.rs"

[build-dependencies]
gcc = "0.3"

[dependencies]
libc = "^0.2.19"

[dev-dependencies]
tempdir = "0.3.5"

[lib]
name = "fd_passing"
